--- a/frontend/JualBeliGame/src/style.css
+++ b/frontend/JualBeliGame/src/style.css
@@ -1,16 +1,43 @@
+body {
+  background-color: #f9f9f9;
+  font-family: "Poppins", sans-serif;
+}
+
 .hero {
-  background: linear-gradient(rgba(213, 208, 208, 0.6), rgba(114, 112, 112, 0.6)), url("https://images.unsplash.com/photo-1607206816058-e8a3efceba3d") center/cover no-repeat;
-  color: white;
-  padding: 100px 20px;
-  text-align: center;
+  background: linear-gradient(to right, #00cfd5, #ffffff);
+  color: #1e1e1e;
   border-radius: 260px 30px 260px 30px;
 }
-.kategori-icon {
-  font-size: 40px;
+#LogoHero {
+  height: 120px;
+  object-fit: contain;
+  border-radius: 45px 30px 45px 30px;
+}
+.btn-success {
+  background-color: #00cfd5;
+  border-color: #00cfd5;
+}
+
+.btn-success:hover {
+  background-color: #00b6c0;
+}
+
+.alert-danger {
+  background-color: #ff4dd2;
+  color: white;
+}
+
+.card-title {
+  color: #00cfd5;
 }
 .card-img-top {
   width: 100%;
   height: 250px;
   object-fit: cover;
+  border-radius: 5px;
+}
+#LogoFooter {
+  height: 60px;
+  object-fit: contain;
   border-radius: 5px;
 }
